Update 'go-bjskdzaw' component image to: quay.io/rhtap_qe/go-bjskdzaw:3b6f00ca764eafe752790bd7f874bb58aca12694@sha256:beb3c94e5287b811216acbdcda5bcd9290d25f3cb46016f33b69194d781061ca

--- a/components/go-bjskdzaw/overlays/development/deployment-patch.yaml
+++ b/components/go-bjskdzaw/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: go-bjskdzaw
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/go-bjskdzaw:3b6f00ca764eafe752790bd7f874bb58aca12694@sha256:beb3c94e5287b811216acbdcda5bcd9290d25f3cb46016f33b69194d781061ca
+          name: container-image
